// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | Form/Checkbox Basic 1`] = `
.c3 {
  color: #0E86FE;
}

.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c4 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
}

.c5 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<label
  checked={false}
  className="vital__checkbox c0"
>
  <span
    checked={false}
    className="c1"
  >
    <div
      checked={false}
      className="c2"
    >
      <div
        className="c3"
        color="#0E86FE"
      >
        <svg
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </span>
  <span
    className="c4"
  >
    <input
      checked={false}
      className="c5"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    Label
  </span>
</label>
`;

exports[`Storyshots Packages | Form/Checkbox CheckboxGroup 1`] = `
.c3 {
  color: #0E86FE;
}

.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c4 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
}

.c5 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<div
  className="vital__checkbox-group "
>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <div
          className="c3"
          color="#0E86FE"
        >
          <svg
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="c4"
    >
      <input
        checked={false}
        className="c5"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <div
          className="c3"
          color="#0E86FE"
        >
          <svg
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="c4"
    >
      <input
        checked={false}
        className="c5"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <div
          className="c3"
          color="#0E86FE"
        >
          <svg
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="c4"
    >
      <input
        checked={false}
        className="c5"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
</div>
`;

exports[`Storyshots Packages | Form/Checkbox Custom Icon 1`] = `
.c3 {
  color: #0E86FE;
}

.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c4 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
  border-color: #95ABD3;
}

.c5 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<label
  checked={true}
  className="vital__checkbox c0"
>
  <span
    checked={true}
    className="c1"
  >
    <div
      checked={true}
      className="c2"
    >
      <div
        className="c3"
        color="#0E86FE"
      >
        <svg
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </span>
  <span
    className="c4"
  >
    <input
      checked={true}
      className="c5"
      disabled={false}
      type="checkbox"
    />
    Custom Icon
  </span>
</label>
`;
